--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="shortcut icon" type="image/png" href="C:\Users\S4\Documents\Website (new)\3298595_bubble_speach_talk_talking_icon.png">
-		<script src="C:\Users\S4\Documents\mqttfile\paho.javascript-1.0.3\paho-mqtt.js" type="text/javascript"></script> <!-- referrence the pho javascript lib directory --> 
+		<script src="https://github.com/Brigo212/MQTTappChat/tree/main/paho.javascript-1.0.3/paho-mqtt.js" type="text/javascript"></script> <!-- referrence the pho javascript lib directory --> 
 		<script type="text/javascript">
 
 			function onConnectionLost()
